manage courses videos in one

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -34,7 +34,7 @@
             <section class="actions-section">
                 <h2 class="section-title-red"><i class="fas fa-cog"></i> Admin Tools</h2>
                 <div class="action-grid">
-                    <a href="manage-courses.html" class="action-card">
+                    <a href="manage-videos.html" class="action-card">
                         <i class="fas fa-book"></i>
                         <span>Manage Courses</span>
                     </a>
