--- a/manage-videos.html
+++ b/manage-videos.html
@@ -111,7 +111,7 @@
             const videoTypeSelect = document.getElementById('videoType');
             const youtubeIdInput = document.getElementById('youtubeId');
             const videoTitleInput = document.getElementById('videoTitle');
-            const videoDescriptionInput = documentgetElementById('videoDescription');
+            const videoDescriptionInput = document.getElementById('videoDescription');
             const videoModuleSelect = document.getElementById('videoModule');
             const totalDurationInput = document.getElementById('totalDuration'); // New input field
             const saveButton = videoForm.querySelector('.add-button'); // Save button
